Add chokidar and simple-git as dependencies in package.json. Ignore node_modules in .gitignore

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chokidar": "^3.5.3",
+    "simple-git": "^3.18.0"
+  }
 }
