--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node src/index.js"
   },
+  "bin": {
+    "autocommiter": "src/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
