--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "chokidar": "^3.5.3",
+    "commander": "^10.0.1",
     "dotenv": "^16.0.3",
     "simple-git": "^3.18.0"
   }
